# bevy_adventure

./: .gitignore  Cargo.toml  README.md
.VSCodeCounter/2022-12-05_19-59-59/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
bevy_adventure_derive/: Cargo.toml
bevy_adventure_derive/src/: lib.rs
examples/adventure-game/: main.rs
examples/amstud/: finale.rs  invasion.rs  main.rs  remove_eight.rs  remove_eighteen.rs  remove_five.rs  remove_one.rs  remove_two_three.rs
examples/rooms/: main.rs
src/: adventure_commands.rs  components.rs  events.rs  input_manager.rs  level.rs  lib.rs  player.rs  plugin.rs  systems.rs
src/input_manager/: input.rs  keywords.rs  mod.rs  output.rs
src/input_output_manager/: input.rs  keywords.rs  mod.rs  output.rs
