[package]
name = "bevy_adventure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "adventure-game"

[dependencies]
# The compiled keywords list
phf = { version = "0.11.1", features = ["macros"] }
# Macros
bevy_adventure_derive = {path = "bevy_adventure_derive"}

[dependencies.bevy]
version = "0.8.1"
default-features = false
features = [
    # Core Bevy
    "bevy_core_pipeline",
    # Bevy windowing & UI
    "bevy_winit",
    "bevy_text",
    "bevy_ui", "bevy_asset",
    "bevy_render",
    "bevy_sprite",
    # Linux compatibility
    "x11",
    "wayland"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

