[package]
name = "bevy_adventure"
version = "0.1.0"
edition = "2021"

[[example]]
name = "rooms"

[dependencies]
# The compiled keywords list
phf = { version = "0.11.1", features = ["macros"] }
# Macros
bevy_adventure_derive = {path = "bevy_adventure_derive"}

[dependencies.bevy]
version = "0.9"
default-features = false
# We only need core Bevy
features = [
    "bevy_core_pipeline"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

