[package]
name = "bevy_text_adventure"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[example]]
name = "rooms"

[dependencies]
# The compiled keywords list
phf = { version = "0.11.1", features = ["macros"] }

[dependencies.bevy]
version = "0.9"
default-features = false
# We only need core Bevy
features = [
    "bevy_core_pipeline"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

